--- a/contracts/package.json
+++ b/contracts/package.json
@@ -14,10 +14,11 @@
     "chai": "^4.3.4",
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.4.6",
-    "hardhat": "^2.6.4"
+    "hardhat": "^2.6.4",
+    "prettier": "^2.4.1",
+    "prettier-plugin-solidity": "*"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^4.3.1",
-    "prettier-plugin-solidity": "*"
+    "@openzeppelin/contracts": "^4.3.1"
   }
 }
